--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.11.5",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.15.17",
     "@mui/styles": "^5.15.17",
@@ -56,6 +58,8 @@
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
+    "materio-mui-react-nextjs-admin-template-free": "file:",
+    "mdi-j": "^1.0.1",
     "mdi-material-ui": "^7.1.0",
     "next": "^12.0.4",
     "nprogress": "^0.2.0",
